MyLanguageParser.py
# Generated from MyLanguage.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class MyLanguageParser ( Parser ):

    grammarFileName = "MyLanguage.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'if'", "'else'", "'for'", "'while'", 
                     "'return'", "','", "'void'", "'int'", "'float'", "'print'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'+'", "'-'", 
                     "'*'", "'/'", "'='", "'('", "')'", "'{'", "'}'", "'>'", 
                     "'<'", "'=='", "'!='", "';'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "INT", "FLOAT", 
                      "ID", "PLUS", "MINUS", "MULT", "DIV", "EQ", "LPAREN", 
                      "RPAREN", "RCORNER", "LCORNER", "GT", "LT", "EQ_EQ", 
                      "NOT_EQ", "END_STATE", "INCREMENT", "DECREMENT", "WS", 
                      "NEWLINE" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_assignmentStatement = 2
    RULE_ifStatement = 3
    RULE_ifElseStatement = 4
    RULE_ifBody = 5
    RULE_elseBody = 6
    RULE_forStatement = 7
    RULE_forInit = 8
    RULE_forModify = 9
    RULE_forBody = 10
    RULE_whileStatement = 11
    RULE_whileBody = 12
    RULE_functionStatement = 13
    RULE_return = 14
    RULE_functionArgs = 15
    RULE_functionBody = 16
    RULE_functionName = 17
    RULE_funcType = 18
    RULE_functionExpr = 19
    RULE_functionParams = 20
    RULE_functionCall = 21
    RULE_printState = 22
    RULE_printBody = 23
    RULE_equation = 24
    RULE_comparison = 25
    RULE_expr = 26

    ruleNames =  [ "program", "statement", "assignmentStatement", "ifStatement", 
                   "ifElseStatement", "ifBody", "elseBody", "forStatement", 
                   "forInit", "forModify", "forBody", "whileStatement", 
                   "whileBody", "functionStatement", "return", "functionArgs", 
                   "functionBody", "functionName", "funcType", "functionExpr", 
                   "functionParams", "functionCall", "printState", "printBody", 
                   "equation", "comparison", "expr" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    INT=11
    FLOAT=12
    ID=13
    PLUS=14
    MINUS=15
    MULT=16
    DIV=17
    EQ=18
    LPAREN=19
    RPAREN=20
    RCORNER=21
    LCORNER=22
    GT=23
    LT=24
    EQ_EQ=25
    NOT_EQ=26
    END_STATE=27
    INCREMENT=28
    DECREMENT=29
    WS=30
    NEWLINE=31

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MyLanguageParser.StatementContext)
            else:
                return self.getTypedRuleContext(MyLanguageParser.StatementContext,i)


        def getRuleIndex(self):
            return MyLanguageParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MyLanguageParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 55 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 54
                self.statement()
                self.state = 57 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 10170) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignmentStatement(self):
            return self.getTypedRuleContext(MyLanguageParser.AssignmentStatementContext,0)


        def ifStatement(self):
            return self.getTypedRuleContext(MyLanguageParser.IfStatementContext,0)


        def ifElseStatement(self):
            return self.getTypedRuleContext(MyLanguageParser.IfElseStatementContext,0)


        def forStatement(self):
            return self.getTypedRuleContext(MyLanguageParser.ForStatementContext,0)


        def whileStatement(self):
            return self.getTypedRuleContext(MyLanguageParser.WhileStatementContext,0)


        def printState(self):
            return self.getTypedRuleContext(MyLanguageParser.PrintStateContext,0)


        def functionStatement(self):
            return self.getTypedRuleContext(MyLanguageParser.FunctionStatementContext,0)


        def functionCall(self):
            return self.getTypedRuleContext(MyLanguageParser.FunctionCallContext,0)


        def return_(self):
            return self.getTypedRuleContext(MyLanguageParser.ReturnContext,0)


        def getRuleIndex(self):
            return MyLanguageParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = MyLanguageParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 68
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 59
                self.assignmentStatement()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 60
                self.ifStatement()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 61
                self.ifElseStatement()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 62
                self.forStatement()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 63
                self.whileStatement()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 64
                self.printState()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 65
                self.functionStatement()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 66
                self.functionCall()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 67
                self.return_()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MyLanguageParser.ID, 0)

        def EQ(self):
            return self.getToken(MyLanguageParser.EQ, 0)

        def expr(self):
            return self.getTypedRuleContext(MyLanguageParser.ExprContext,0)


        def END_STATE(self):
            return self.getToken(MyLanguageParser.END_STATE, 0)

        def getRuleIndex(self):
            return MyLanguageParser.RULE_assignmentStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignmentStatement" ):
                listener.enterAssignmentStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignmentStatement" ):
                listener.exitAssignmentStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignmentStatement" ):
                return visitor.visitAssignmentStatement(self)
            else:
                return visitor.visitChildren(self)




    def assignmentStatement(self):

        localctx = MyLanguageParser.AssignmentStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_assignmentStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self.match(MyLanguageParser.ID)
            self.state = 71
            self.match(MyLanguageParser.EQ)
            self.state = 72
            self.expr(0)
            self.state = 73
            self.match(MyLanguageParser.END_STATE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def equation(self):
            return self.getTypedRuleContext(MyLanguageParser.EquationContext,0)


        def RCORNER(self):
            return self.getToken(MyLanguageParser.RCORNER, 0)

        def ifBody(self):
            return self.getTypedRuleContext(MyLanguageParser.IfBodyContext,0)


        def LCORNER(self):
            return self.getToken(MyLanguageParser.LCORNER, 0)

        def END_STATE(self):
            return self.getToken(MyLanguageParser.END_STATE, 0)

        def getRuleIndex(self):
            return MyLanguageParser.RULE_ifStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStatement" ):
                listener.enterIfStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStatement" ):
                listener.exitIfStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfStatement" ):
                return visitor.visitIfStatement(self)
            else:
                return visitor.visitChildren(self)




    def ifStatement(self):

        localctx = MyLanguageParser.IfStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_ifStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self.match(MyLanguageParser.T__0)
            self.state = 76
            self.equation()
            self.state = 77
            self.match(MyLanguageParser.RCORNER)
            self.state = 78
            self.ifBody()
            self.state = 79
            self.match(MyLanguageParser.LCORNER)
            self.state = 80
            self.match(MyLanguageParser.END_STATE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfElseStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def equation(self):
            return self.getTypedRuleContext(MyLanguageParser.EquationContext,0)


        def RCORNER(self, i:int=None):
            if i is None:
                return self.getTokens(MyLanguageParser.RCORNER)
            else:
                return self.getToken(MyLanguageParser.RCORNER, i)

        def ifBody(self):
            return self.getTypedRuleContext(MyLanguageParser.IfBodyContext,0)


        def LCORNER(self, i:int=None):
            if i is None:
                return self.getTokens(MyLanguageParser.LCORNER)
            else:
                return self.getToken(MyLanguageParser.LCORNER, i)

        def elseBody(self):
            return self.getTypedRuleContext(MyLanguageParser.ElseBodyContext,0)


        def END_STATE(self):
            return self.getToken(MyLanguageParser.END_STATE, 0)

        def getRuleIndex(self):
            return MyLanguageParser.RULE_ifElseStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfElseStatement" ):
                listener.enterIfElseStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfElseStatement" ):
                listener.exitIfElseStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfElseStatement" ):
                return visitor.visitIfElseStatement(self)
            else:
                return visitor.visitChildren(self)




    def ifElseStatement(self):

        localctx = MyLanguageParser.IfElseStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_ifElseStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self.match(MyLanguageParser.T__0)
            self.state = 83
            self.equation()
            self.state = 84
            self.match(MyLanguageParser.RCORNER)
            self.state = 85
            self.ifBody()
            self.state = 86
            self.match(MyLanguageParser.LCORNER)
            self.state = 87
            self.match(MyLanguageParser.T__1)
            self.state = 88
            self.match(MyLanguageParser.RCORNER)
            self.state = 89
            self.elseBody()
            self.state = 90
            self.match(MyLanguageParser.LCORNER)
            self.state = 91
            self.match(MyLanguageParser.END_STATE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfBodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MyLanguageParser.StatementContext)
            else:
                return self.getTypedRuleContext(MyLanguageParser.StatementContext,i)


        def getRuleIndex(self):
            return MyLanguageParser.RULE_ifBody

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfBody" ):
                listener.enterIfBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfBody" ):
                listener.exitIfBody(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfBody" ):
                return visitor.visitIfBody(self)
            else:
                return visitor.visitChildren(self)




    def ifBody(self):

        localctx = MyLanguageParser.IfBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_ifBody)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 10170) != 0):
                self.state = 93
                self.statement()
                self.state = 98
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElseBodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MyLanguageParser.StatementContext)
            else:
                return self.getTypedRuleContext(MyLanguageParser.StatementContext,i)


        def getRuleIndex(self):
            return MyLanguageParser.RULE_elseBody

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterElseBody" ):
                listener.enterElseBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitElseBody" ):
                listener.exitElseBody(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitElseBody" ):
                return visitor.visitElseBody(self)
            else:
                return visitor.visitChildren(self)




    def elseBody(self):

        localctx = MyLanguageParser.ElseBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_elseBody)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 10170) != 0):
                self.state = 99
                self.statement()
                self.state = 104
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LPAREN(self):
            return self.getToken(MyLanguageParser.LPAREN, 0)

        def forInit(self):
            return self.getTypedRuleContext(MyLanguageParser.ForInitContext,0)


        def equation(self):
            return self.getTypedRuleContext(MyLanguageParser.EquationContext,0)


        def END_STATE(self, i:int=None):
            if i is None:
                return self.getTokens(MyLanguageParser.END_STATE)
            else:
                return self.getToken(MyLanguageParser.END_STATE, i)

        def forModify(self):
            return self.getTypedRuleContext(MyLanguageParser.ForModifyContext,0)


        def RPAREN(self):
            return self.getToken(MyLanguageParser.RPAREN, 0)

        def RCORNER(self):
            return self.getToken(MyLanguageParser.RCORNER, 0)

        def forBody(self):
            return self.getTypedRuleContext(MyLanguageParser.ForBodyContext,0)


        def LCORNER(self):
            return self.getToken(MyLanguageParser.LCORNER, 0)

        def getRuleIndex(self):
            return MyLanguageParser.RULE_forStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForStatement" ):
                listener.enterForStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForStatement" ):
                listener.exitForStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitForStatement" ):
                return visitor.visitForStatement(self)
            else:
                return visitor.visitChildren(self)




    def forStatement(self):

        localctx = MyLanguageParser.ForStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_forStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.match(MyLanguageParser.T__2)
            self.state = 106
            self.match(MyLanguageParser.LPAREN)
            self.state = 107
            self.forInit()
            self.state = 108
            self.equation()
            self.state = 109
            self.match(MyLanguageParser.END_STATE)
            self.state = 110
            self.forModify()
            self.state = 111
            self.match(MyLanguageParser.RPAREN)
            self.state = 112
            self.match(MyLanguageParser.RCORNER)
            self.state = 113
            self.forBody()
            self.state = 114
            self.match(MyLanguageParser.LCORNER)
            self.state = 115
            self.match(MyLanguageParser.END_STATE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForInitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MyLanguageParser.ID, 0)

        def EQ(self):
            return self.getToken(MyLanguageParser.EQ, 0)

        def expr(self):
            return self.getTypedRuleContext(MyLanguageParser.ExprContext,0)


        def END_STATE(self):
            return self.getToken(MyLanguageParser.END_STATE, 0)

        def getRuleIndex(self):
            return MyLanguageParser.RULE_forInit

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForInit" ):
                listener.enterForInit(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForInit" ):
                listener.exitForInit(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitForInit" ):
                return visitor.visitForInit(self)
            else:
                return visitor.visitChildren(self)




    def forInit(self):

        localctx = MyLanguageParser.ForInitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_forInit)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self.match(MyLanguageParser.ID)
            self.state = 118
            self.match(MyLanguageParser.EQ)
            self.state = 119
            self.expr(0)
            self.state = 120
            self.match(MyLanguageParser.END_STATE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForModifyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MyLanguageParser.ID, 0)

        def INCREMENT(self):
            return self.getToken(MyLanguageParser.INCREMENT, 0)

        def DECREMENT(self):
            return self.getToken(MyLanguageParser.DECREMENT, 0)

        def getRuleIndex(self):
            return MyLanguageParser.RULE_forModify

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForModify" ):
                listener.enterForModify(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForModify" ):
                listener.exitForModify(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitForModify" ):
                return visitor.visitForModify(self)
            else:
                return visitor.visitChildren(self)




    def forModify(self):

        localctx = MyLanguageParser.ForModifyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_forModify)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.match(MyLanguageParser.ID)
            self.state = 123
            _la = self._input.LA(1)
            if not(_la==28 or _la==29):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForBodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MyLanguageParser.StatementContext)
            else:
                return self.getTypedRuleContext(MyLanguageParser.StatementContext,i)


        def getRuleIndex(self):
            return MyLanguageParser.RULE_forBody

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForBody" ):
                listener.enterForBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForBody" ):
                listener.exitForBody(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitForBody" ):
                return visitor.visitForBody(self)
            else:
                return visitor.visitChildren(self)




    def forBody(self):

        localctx = MyLanguageParser.ForBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_forBody)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 10170) != 0):
                self.state = 125
                self.statement()
                self.state = 130
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhileStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LPAREN(self):
            return self.getToken(MyLanguageParser.LPAREN, 0)

        def equation(self):
            return self.getTypedRuleContext(MyLanguageParser.EquationContext,0)


        def RPAREN(self):
            return self.getToken(MyLanguageParser.RPAREN, 0)

        def RCORNER(self):
            return self.getToken(MyLanguageParser.RCORNER, 0)

        def whileBody(self):
            return self.getTypedRuleContext(MyLanguageParser.WhileBodyContext,0)


        def LCORNER(self):
            return self.getToken(MyLanguageParser.LCORNER, 0)

        def END_STATE(self):
            return self.getToken(MyLanguageParser.END_STATE, 0)

        def getRuleIndex(self):
            return MyLanguageParser.RULE_whileStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhileStatement" ):
                listener.enterWhileStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhileStatement" ):
                listener.exitWhileStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhileStatement" ):
                return visitor.visitWhileStatement(self)
            else:
                return visitor.visitChildren(self)




    def whileStatement(self):

        localctx = MyLanguageParser.WhileStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_whileStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self.match(MyLanguageParser.T__3)
            self.state = 132
            self.match(MyLanguageParser.LPAREN)
            self.state = 133
            self.equation()
            self.state = 134
            self.match(MyLanguageParser.RPAREN)
            self.state = 135
            self.match(MyLanguageParser.RCORNER)
            self.state = 136
            self.whileBody()
            self.state = 137
            self.match(MyLanguageParser.LCORNER)
            self.state = 138
            self.match(MyLanguageParser.END_STATE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhileBodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MyLanguageParser.StatementContext)
            else:
                return self.getTypedRuleContext(MyLanguageParser.StatementContext,i)


        def getRuleIndex(self):
            return MyLanguageParser.RULE_whileBody

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhileBody" ):
                listener.enterWhileBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhileBody" ):
                listener.exitWhileBody(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhileBody" ):
                return visitor.visitWhileBody(self)
            else:
                return visitor.visitChildren(self)




    def whileBody(self):

        localctx = MyLanguageParser.WhileBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_whileBody)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 10170) != 0):
                self.state = 140
                self.statement()
                self.state = 145
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def funcType(self):
            return self.getTypedRuleContext(MyLanguageParser.FuncTypeContext,0)


        def functionName(self):
            return self.getTypedRuleContext(MyLanguageParser.FunctionNameContext,0)


        def LPAREN(self):
            return self.getToken(MyLanguageParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(MyLanguageParser.RPAREN, 0)

        def RCORNER(self):
            return self.getToken(MyLanguageParser.RCORNER, 0)

        def functionBody(self):
            return self.getTypedRuleContext(MyLanguageParser.FunctionBodyContext,0)


        def LCORNER(self):
            return self.getToken(MyLanguageParser.LCORNER, 0)

        def END_STATE(self):
            return self.getToken(MyLanguageParser.END_STATE, 0)

        def functionArgs(self):
            return self.getTypedRuleContext(MyLanguageParser.FunctionArgsContext,0)


        def return_(self):
            return self.getTypedRuleContext(MyLanguageParser.ReturnContext,0)


        def getRuleIndex(self):
            return MyLanguageParser.RULE_functionStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionStatement" ):
                listener.enterFunctionStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionStatement" ):
                listener.exitFunctionStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionStatement" ):
                return visitor.visitFunctionStatement(self)
            else:
                return visitor.visitChildren(self)




    def functionStatement(self):
